--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <div class="banner" style="background-image: url('home1.jpg');"></div>
+                        <div class="banner" style="background-image: url('home1.jpg'); background-repeat: no-repeat;"></div>
                         <div class="carousel-caption">
                             <h2 class="move1">We offer <span>Wine</span></h2>
                             <h3 class="move2">Don't hesitate to enjoy!</h3>
@@ -68,7 +68,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="banner" style="background-image: url('home2.jpg');"></div>
+                        <div class="banner" style="background-image: url('home2.jpg'); background-repeat: no-repeat;"></div>
                         <div class="carousel-caption">
                             <h2 class="move1">We offer <span>Nature</span></h2>
                             <h3 class="move2">Don't hesitate to enjoy!</h3>
@@ -76,7 +76,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="banner" style="background-image: url('home3.jpg');"></div>
+                        <div class="banner" style="background-image: url('home3.jpg'); background-repeat: no-repeat;"></div>
                         <div class="carousel-caption">
                             <h2 class="move1">We offer <span>Food</span></h2>
                             <h3 class="move2">Don't hesitate to enjoy!</h3>
